--- a/package.json
+++ b/package.json
@@ -22,14 +22,21 @@
   "dependencies": {
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/jwt": "^6.1.2",
     "@nestjs/mongoose": "^6.3.1",
+    "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/swagger": "^4.3.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "mongoose": "^5.9.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
@@ -38,6 +45,8 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.6",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
