--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.62.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-permissions": "^2.1.4",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
