--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "leaflet": "^1.6.0",
     "ramda": "^0.27.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
     "react-leaflet": "^2.6.3",
     "react-router-dom": "^5.1.2",
