--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^2.5.0"
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "prettier": "^2.0.5"
   }
 }
